[tool.poetry]
name = "flyte-testing"
version = "0.1.0"
description = ""
authors = ["James Bristow <jbris@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.10,<3.13"
flytekit = "^1.15.1"
pandas = "^2.2.3"
joblib = "^1.4.2"
xgboost = "^2.1.4"
scikit-learn = "^1.6.1"
pyarrow = "^19.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
